Prevent horizontal scroll on all pages

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ html, body, #root {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   background-color: #F4F2EE;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
